--- a/src/Pages/Login/Login.css
+++ b/src/Pages/Login/Login.css
@@ -1,5 +1,6 @@
 
 .login-part {
+    position: fixed;
     height: 100vh;
     width: 100%;
     display: flex;
